--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <div class="carousel-inner" role="listbox">
                         <div class="carousel-item active">
                             <!-- <img src="img/carousel-2.jpg" class="img-fluid" alt="Image"> -->
-							<img src="img/carousel-1.png" class="img-fluid" alt="Image">
+							<img src="img/carousel/carousel_1_.png" class="img-fluid" alt="Image">
                             <div class="carousel-caption">
                                 <div class="p-3" style="max-width: 900px;">
                                     <h4 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;"></h4>
@@ -149,7 +149,7 @@
                         </div>
                         <div class="carousel-item">
                             <!-- <img src="img/carousel-3.jpg" class="img-fluid" alt="Image"> -->
-							<img src="img/fotos/rawpixel/winning-trophy-football.jpg" class="img-fluid" alt="Image">
+							<img src="img/carousel/carousel_2.jpg" class="img-fluid" alt="Image">
                             <div class="carousel-caption">
                                 <div class="p-3" style="max-width: 900px;">
                                     <h4 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;">ADR São PEDRO FINS</h4>
