--- a/about.html
+++ b/about.html
@@ -69,9 +69,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
-                        <a href="index.html" class="nav-item nav-link active">Início</a>
-                        <a href="about.html" class="nav-item nav-link">O clube</a>
+                        <a href="index.html" class="nav-item nav-link">Início</a>
+                        <a href="about.html" class="nav-item nav-link active">O clube</a>
                         <a href="services.html" class="nav-item nav-link">Competições</a>
+						<a href="formacao.html" class="nav-item nav-link">Formação</a>
                         <a href="packages.html" class="nav-item nav-link">Galeria</a>
                         <a href="blog.html" class="nav-item nav-link">Notícias</a>
                         <!-- <div class="nav-item dropdown">
