--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     </ol>
                     <div class="carousel-inner" role="listbox">
                         <div class="carousel-item active">
-							<img src="img/carousel/carousel_2.jpg" class="img-fluid" alt="Image">
+							<img src="img/carousel/01_logo.png" class="img-fluid" alt="Image">
                             <div class="carousel-caption">
                                 <div class="p-3" style="max-width: 900px;">
                                     <h4 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;"></h4>
@@ -148,7 +148,7 @@
                         </div>
                         <div class="carousel-item">
                             <!-- <img src="img/carousel-3.jpg" class="img-fluid" alt="Image"> -->
-							<img src="img/carousel/carousel_2.jpg" class="img-fluid" alt="Image">
+							<img src="img/carousel/03_torneio.jpg" class="img-fluid" alt="Image">
                             <div class="carousel-caption">
                                 <div class="p-3" style="max-width: 900px;">
                                     <h4 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;">ADR São PEDRO FINS</h4>
