--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
                     </ol>
                     <div class="carousel-inner" role="listbox">
                         <div class="carousel-item active">
-							<img src="img/carousel/01_logo.png" class="img-fluid" alt="Image">
+							<!-- <img src="img/carousel/01_logo.png" class="img-fluid" alt="Image"> -->
+							<img src="img/carousel/04_MG_3432.png" class="img-fluid" alt="Image">
                             <div class="carousel-caption">
                                 <div class="p-3" style="max-width: 900px;">
                                     <h4 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;"></h4>
@@ -113,6 +114,21 @@
                                     </p>
                                     <div class="d-flex align-items-center justify-content-center">
                                         
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+						<div class="carousel-item">
+                            <!-- <img src="img/carousel-3.jpg" class="img-fluid" alt="Image"> -->
+							<img src="img/carousel/03_torneio.jpg" class="img-fluid" alt="Image">
+                            <div class="carousel-caption">
+                                <div class="p-3" style="max-width: 900px;">
+                                    <h4 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;">ADR São PEDRO FINS</h4>
+                                    <h1 class="display-2 text-capitalize text-white mb-4">Torneio 2024</h1>
+                                    <p class="mb-5 fs-5">Brevemente mais informações..:!!!!
+                                    </p>
+                                    <div class="d-flex align-items-center justify-content-center">
+                                        <a class="btn-hover-bg btn btn-primary rounded-pill text-white py-3 px-5" href="#">Inscreva-se aqui</a>
                                     </div>
                                 </div>
                             </div>
@@ -132,21 +148,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="carousel-item">
-                            <!-- <img src="img/carousel-3.jpg" class="img-fluid" alt="Image"> -->
-							<img src="img/carousel/03_torneio.jpg" class="img-fluid" alt="Image">
-                            <div class="carousel-caption">
-                                <div class="p-3" style="max-width: 900px;">
-                                    <h4 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;">ADR São PEDRO FINS</h4>
-                                    <h1 class="display-2 text-capitalize text-white mb-4">Torneio 2024</h1>
-                                    <p class="mb-5 fs-5">Brevemente mais informações..:!!!!
-                                    </p>
-                                    <div class="d-flex align-items-center justify-content-center">
-                                        <a class="btn-hover-bg btn btn-primary rounded-pill text-white py-3 px-5" href="#">Inscreva-se aqui</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselId" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon btn bg-primary" aria-hidden="false"></span>
@@ -201,7 +203,6 @@
                                 <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>24/7 Service</p>
                             </div>
                         </div>
-                        <a class="btn btn-primary rounded-pill py-3 px-5 mt-2" href="">Read More</a>
                     </div>
                 </div>
             </div>
@@ -1255,7 +1256,7 @@
             <div class="container py-5">
                 <div class="mx-auto text-center mb-5" style="max-width: 900px;">
                     <h5 class="section-title px-3">Futebol</h5>
-                    <h1 class="mb-0">Os nossos escalões</h1>
+                    <h1 class="mb-0">Os nossos escalões (temporada 2023/2024)</h1>
                 </div>
                 <div class="row g-4">
                     <div class="col-md-6 col-lg-3">
