--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                                 <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 pe-0">
                                     <div class="service-content text-end">
                                         <h5 class="mb-4">Academia</h5>
-                                        <p class="mb-0"><br>Introdução à prática do desporto, mais especificamente o futebol, para crianças desde o 5 até aos 7 anos. 
+                                        <p class="mb-0"><br>Introdução à prática desportiva, mais especificamente oo nível do futebol, para crianças desde o 5 até aos 7 anos. 
 										 
 										   <br> <br>
 										  
@@ -240,7 +240,7 @@
                                 <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 pe-0">
                                     <div class="service-content text-end">
                                         <h5 class="mb-4">Futebol formação</h5>
-                                        <p class="mb-0">Dolor sit amet consectetur adipisicing elit. Non alias eum, suscipit expedita corrupti officiis debitis possimus nam laudantium beatae quidem dolore consequuntur voluptate rem reiciendis, omnis sequi harum earum.
+                                        <p class="mb-0">Prática desportiva de competição ao nível da Associação de Futebol do Porto. <br> <br>
                                         </p>
                                     </div>
                                     <div class="service-icon p-4">
@@ -260,7 +260,7 @@
                                     </div>
                                     <div class="service-content">
                                         <h5 class="mb-4">Atividades para Associados</h5>
-                                        <p class="mb-0">Dolor sit amet consectetur adipisicing elit. Non alias eum, suscipit expedita corrupti officiis debitis possimus nam laudantium beatae quidem dolore consequuntur voluptate rem reiciendis, omnis sequi harum earum.
+                                        <p class="mb-0"><br> <br>...... <br> <br>
                                         </p>
                                     </div>
                                 </div>
@@ -273,7 +273,7 @@
                                     </div>
                                     <div class="service-content">
                                         <h5 class="mb-4">FutSal (brevemente)</h5>
-                                        <p class="mb-0">Dolor sit amet consectetur adipisicing elit. Non alias eum, suscipit expedita corrupti officiis debitis possimus nam laudantium beatae quidem dolore consequuntur voluptate rem reiciendis, omnis sequi harum earum.
+                                        <p class="mb-0"><br> Uma modalidade que se pretende retomar<br>
                                         </p>
                                     </div>
                                 </div>
