--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <!-- Navbar & Hero Start -->
         <div class="container-fluid position-relative p-0">
             <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
-                <a href="" class="navbar-brand p-0">
+                <a href="/" class="navbar-brand p-0">
                     
                     <img src="img/logo_1.png" alt="Logo"> 
 					<!--<h1 class="m-0">ADR S. Pedro Fins</h1> -->
