--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
                     </div>
                     <div class="col-lg-7" style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url(img/about-img-1.png);">
                         <h5 class="section-about-title pe-3">Sobre Nós</h5>
-                        <h1 class="mb-4">Bem-vindo ao <span class="text-primary">ADRSPFins</span></h1>
+                        <h1 class="mb-4">Bem-vindo ao <span class="text-primary">A.D.R. S. Pedro Fins</span></h1>
                         <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, dolorum, doloribus sunt dicta, officia voluptatibus libero necessitatibus natus impedit quam ullam assumenda? Id atque iste consectetur. Commodi odit ab saepe!</p>
                         <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quos voluptatem suscipit neque enim, doloribus ipsum rem eos distinctio, dignissimos nisi saepe nulla? Libero numquam perferendis provident placeat molestiae quia?</p>
                         <div class="row gy-2 gx-4 mb-4">
