--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
                     </div>
                     <div class="col-lg-7" style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url(img/logo.png);">
                         <h5 class="section-about-title pe-3">Sobre nós</h5>
-                        <h1 class="mb-4">Bem vindo ao <span class="text-primary">ADRSPFins</span></h1>
-                        <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, dolorum, doloribus sunt dicta, officia voluptatibus libero necessitatibus natus impedit quam ullam assumenda? Id atque iste consectetur. Commodi odit ab saepe!</p>
-                        <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quos voluptatem suscipit neque enim, doloribus ipsum rem eos distinctio, dignissimos nisi saepe nulla? Libero numquam perferendis provident placeat molestiae quia?</p>
+                        <h1 class="mb-4">Bem-vindo ao <span class="text-primary">A.D.R. S. Pedro Fins</span></h1>
+                        <p class="mb-4">Fundado em ...............jhjdsfkj sdfjksdhfkjsdfkljsdklfjsdklfjsdlkf kldsjfskdlfjdsklfjdsklfjsdklf sdf..............................................................................</p>
+                        <p class="mb-4">...........kljjdsfl kdklfj dsklfj dskfjdskfj dlskfjsdklfj sdklfjdsklf djlfds dfjdhkjfhsdjkf dsjkfh dskj.........................</p>
                         <div class="row gy-2 gx-4 mb-4">
                             <div class="col-sm-6">
                                 <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>First Class Flights</p>
