--- a/galeria.html
+++ b/galeria.html
@@ -114,108 +114,93 @@
 						<article class="thumb">
 							<a href="galeria/images/fulls/01.jpg" class="image"><img src="galeria/images/thumbs/01.jpg" alt="" /></a>
 							<h2>Séniores 2023/2024</h2>
-							<p>Fabão, Coentrão, Gilson, Tiago Torres (GR). <br> jkdhfjkdhfkjhsdf</p>
+							<p>Fabão, Coentrão, Gilson, Tiago Torres (GR). <br> jkdhfjkdhfkjhsdf<br> @S. Pedro Fins</p>
 						</article>
 						<article class="thumb">
 							<a href="galeria/images/fulls/02.jpg" class="image"><img src="galeria/images/thumbs/02.jpg" alt="" /></a>
-							<h2>Nisl adipiscing</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>Sub-9</h2>
+							<p>  _ <br> @S. Pedro Fins.</p>
 						</article>
 						<article class="thumb">
 							<a href="galeria/images/fulls/03.jpg" class="image"><img src="galeria/images/thumbs/03.jpg" alt="" /></a>
-							<h2>Tempus aliquam veroeros</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>Sub 10/11</h2>
+							<p>  _ <br> @S. Pedro Fins.</p>
 						</article>
 						<article class="thumb">
 							<a href="galeria/images/fulls/04.jpg" class="image"><img src="galeria/images/thumbs/04.jpg" alt="" /></a>
-							<h2>Aliquam ipsum sed dolore</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>Sub 9</h2>
+							<p>  _ <br> @S. Pedro Fins.</p>
 						</article>
 						<article class="thumb">
 							<a href="galeria/images/fulls/05.jpg" class="image"><img src="galeria/images/thumbs/05.jpg" alt="" /></a>
-							<h2>Cursis aliquam nisl</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>Sub 10/11</h2>
+							<p>  _ <br> @S. Pedro Fins.</p>
 						</article>
 						<article class="thumb">
 							<a href="galeria/images/fulls/06.jpg" class="image"><img src="galeria/images/thumbs/06.jpg" alt="" /></a>
-							<h2>Sed consequat phasellus</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>Sub 10/11</h2>
+							<p>  _ <br> @S. Pedro Fins.</p>
 						</article>
 						<article class="thumb">
 							<a href="galeria/images/fulls/07.jpg" class="image"><img src="galeria/images/thumbs/07.jpg" alt="" /></a>
-							<h2>Mauris id tellus arcu</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>Sub 10/11</h2>
+							<p>  _ <br> @S. Pedro Fins.</p>
 						</article>
 						<article class="thumb">
 							<a href="galeria/images/fulls/08.jpg" class="image"><img src="galeria/images/thumbs/08.jpg" alt="" /></a>
-							<h2>Nunc vehicula id nulla</h2>
+							<h2>Sub 10/11</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
 							<a href="galeria/images/fulls/09.jpg" class="image"><img src="galeria/images/thumbs/09.jpg" alt="" /></a>
-							<h2>Neque et faucibus viverra</h2>
+							<h2>Sub 10/11</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
 							<a href="galeria/images/fulls/10.jpg" class="image"><img src="galeria/images/thumbs/10.jpg" alt="" /></a>
-							<h2>Mattis ante fermentum</h2>
+							<h2>Sub 10/11</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
 							<a href="galeria/images/fulls/11.jpg" class="image"><img src="galeria/images/thumbs/11.jpg" alt="" /></a>
-							<h2>Sed ac elementum arcu</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2> </h2>
+							<p> .</p>
 						</article>
 						<article class="thumb">
 							<a href="galeria/images/fulls/12.jpg" class="image"><img src="galeria/images/thumbs/12.jpg" alt="" /></a>
-							<h2>Vehicula id nulla dignissim</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2> </h2>
+							<p> .</p>
 						</article>
 						<article class="thumb">
 							<a href="galeria/images/fulls/12.jpg" class="image"><img src="galeria/images/thumbs/12.jpg" alt="" /></a>
-							<h2>Vehicula id nulla dignissim</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2> </h2>
+							<p> .</p>
 						</article>
 						<article class="thumb">
 							<a href="galeria/images/fulls/12.jpg" class="image"><img src="galeria/images/thumbs/12.jpg" alt="" /></a>
-							<h2>Vehicula id nulla dignissim</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2> </h2>
+							<p> .</p>
 						</article>
 						<article class="thumb">
 							<a href="galeria/images/fulls/12.jpg" class="image"><img src="galeria/images/thumbs/12.jpg" alt="" /></a>
-							<h2>Vehicula id nulla dignissim</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2> </h2>
+							<p> .</p>
+						</article>
+						<article class="thumb">
+							<h2> </h2>
+							<p> .</p>
 						</article>
 						<article class="thumb">
 							<a href="galeria/images/fulls/12.jpg" class="image"><img src="galeria/images/thumbs/12.jpg" alt="" /></a>
-							<h2>Vehicula id nulla dignissim</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2> </h2>
+							<p> .</p>
 						</article>
 						<article class="thumb">
 							<a href="galeria/images/fulls/12.jpg" class="image"><img src="galeria/images/thumbs/12.jpg" alt="" /></a>
-							<h2>Vehicula id nulla dignissim</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2> </h2>
+							<p> .</p>
 						</article>
-						<article class="thumb">
-							<a href="galeria/images/fulls/12.jpg" class="image"><img src="galeria/images/thumbs/12.jpg" alt="" /></a>
-							<h2>Vehicula id nulla dignissim</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
-						<article class="thumb">
-							<a href="galeria/images/fulls/12.jpg" class="image"><img src="galeria/images/thumbs/12.jpg" alt="" /></a>
-							<h2>Vehicula id nulla dignissim</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
-						<article class="thumb">
-							<a href="galeria/images/fulls/12.jpg" class="image"><img src="galeria/images/thumbs/12.jpg" alt="" /></a>
-							<h2>Vehicula id nulla dignissim</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
-						<article class="thumb">
-							<a href="galeria/images/fulls/12.jpg" class="image"><img src="galeria/images/thumbs/12.jpg" alt="" /></a>
-							<h2>Vehicula id nulla dignissim</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
+
 					</div>
 			</div>
 
