--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
                         <h1 class="mb-4">Bem-vindo ao <span class="text-primary">A.D.R. S. Pedro Fins</span></h1>
                         <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, dolorum, doloribus sunt dicta, officia voluptatibus libero necessitatibus natus impedit quam ullam assumenda? Id atque iste consectetur. Commodi odit ab saepe!</p>
                         <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quos voluptatem suscipit neque enim, doloribus ipsum rem eos distinctio, dignissimos nisi saepe nulla? Libero numquam perferendis provident placeat molestiae quia?</p>
-                        <div class="row gy-2 gx-4 mb-4">
+                        <!-- <div class="row gy-2 gx-4 mb-4">
                             <div class="col-sm-6">
                                 <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>First Class Flights</p>
                             </div>
@@ -122,7 +122,7 @@
                                 <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>24/7 Service</p>
                             </div>
                         </div>
-                        <a class="btn btn-primary rounded-pill py-3 px-5 mt-2" href="">Read More</a>
+                        <!-- <a class="btn btn-primary rounded-pill py-3 px-5 mt-2" href="">Read More</a> -->
                     </div>
                 </div>
             </div>
@@ -130,6 +130,7 @@
         <!-- About End -->
 
         <!-- Travel Guide Start -->
+		<!--
         <div class="container-fluid guide py-5">
             <div class="container py-5">
                 <div class="mx-auto text-center mb-5" style="max-width: 900px;">
@@ -223,7 +224,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>  -->
         <!-- Travel Guide End -->
 
        
