--- a/blog.html
+++ b/blog.html
@@ -104,9 +104,9 @@
                         <div class="blog-item">
                             <div class="blog-img">
                                 <div class="blog-img-inner">
-                                    <img class="img-fluid w-100 rounded-top" src="img/blog-1.jpg" alt="Image">
+                                    <img class="img-fluid w-100 rounded-top" src="img/fotos/torneio_2024_sub11.jpg" alt="Image">
                                     <div class="blog-icon">
-                                        <a href="#" class="my-auto"><i class="fas fa-link fa-2x text-white"></i></a>
+                                        
                                     </div>
                                 </div>
                                 <div class="blog-info d-flex align-items-center border border-start-0 border-end-0">
@@ -118,11 +118,11 @@
                             <div class="blog-content border border-top-0 rounded-bottom p-4">
                                 <a href="#" class="h4">Participação Torneio Páscoa Gondim FC</a>
                                 <p class="my-3">Os sub-9 e os sub-10/11 participaram no torneio organizado pelo Gondim FC nos dias 29 e 30/03/2024</p>
-                                <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Read More</a>
+                                <!-- <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Read More</a> -->
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6">
+                   <!--  <div class="col-lg-4 col-md-6">
                         <div class="blog-item">
                             <div class="blog-img">
                                 <div class="blog-img-inner">
@@ -167,7 +167,7 @@
                                 <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Read More</a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
