--- a/about.html
+++ b/about.html
@@ -100,8 +100,15 @@
                     <div class="col-lg-7" style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url(img/about-img-1.png);">
                         <h5 class="section-about-title pe-3">Sobre Nós</h5>
                         <h1 class="mb-4">Bem-vindo ao <span class="text-primary">A.D.R. S. Pedro Fins</span></h1>
-                        <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, dolorum, doloribus sunt dicta, officia voluptatibus libero necessitatibus natus impedit quam ullam assumenda? Id atque iste consectetur. Commodi odit ab saepe!</p>
-                        <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quos voluptatem suscipit neque enim, doloribus ipsum rem eos distinctio, dignissimos nisi saepe nulla? Libero numquam perferendis provident placeat molestiae quia?</p>
+                        <p class="mb-4">A Associação Desportiva e Recreativa de S. Pedro Fins foi fundada em 12 de abril de 1962 tendo iniciado a sua atividade com o Teatro e o Ténis de Mesa, evoluindo mais tarde para a prática de Futebol.
+						<br>
+						Fruto do trabalho, da ousadia e da coragem das Gentes de S. Pedro Fins, ao longo destes quase 60 anos de vida, têm sido muitas as experiências vividas.
+						<br>
+                        Resiliência tem sido o nome de ordem. A capacidade de lidar com os problemas, adaptar-se a mudanças e superar obstáculos é que têm contribuído para os sucessos alcançados ao longo dos anos.
+						<br>A coletividade é a mais antiga da Freguesia e contribui fortemente para coesão, integração e união social entre a população.
+						<br>Atualmente, a ADR S. PEDRO FINS movimenta mais de 150 atletas, distribuídos pelas modalidades de futebol e futsal. Todas as épocas desportivas participam em campeonatos oficiais realizados pela Associação de Futebol do Porto, tendo conseguido levar o nome da ADR S. PEDRO FINS aos vários cantos do nosso país.
+						<br>A formação e o acompanhamento de jovens tem sido a prioridade e o foco da associação.</p>
+
                         <!-- <div class="row gy-2 gx-4 mb-4">
                             <div class="col-sm-6">
                                 <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>First Class Flights</p>
