--- a/index.html
+++ b/index.html
@@ -181,7 +181,15 @@
                     <div class="col-lg-7" style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url(img/logo.png);">
                         <h5 class="section-about-title pe-3">Sobre nós</h5>
                         <h1 class="mb-4">Bem-vindo ao <span class="text-primary">A.D.R. S. Pedro Fins</span></h1>
-                        <p class="mb-4">Fundado em ...............jhjdsfkj sdfjksdhfkjsdfkljsdklfjsdklfjsdlkf kldsjfskdlfjdsklfjdsklfjsdklf sdf..............................................................................</p>
+						<p class="mb-4">A Associação Desportiva e Recreativa de S. Pedro Fins foi fundada em 12 de abril de 1962 tendo iniciado a sua atividade com o Teatro e o Ténis de Mesa, evoluindo mais tarde para a prática de Futebol.
+						<br>
+						Fruto do trabalho, da ousadia e da coragem das Gentes de S. Pedro Fins, ao longo destes quase 60 anos de vida, têm sido muitas as experiências vividas.
+						<br>
+                        Resiliência tem sido o nome de ordem. A capacidade de lidar com os problemas, adaptar-se a mudanças e superar obstáculos é que têm contribuído para os sucessos alcançados ao longo dos anos.
+						<br>A coletividade é a mais antiga da Freguesia e contribui fortemente para coesão, integração e união social entre a população.
+						<br>Atualmente, a ADR S. PEDRO FINS movimenta mais de 150 atletas, distribuídos pelas modalidades de futebol e futsal. Todas as épocas desportivas participam em campeonatos oficiais realizados pela Associação de Futebol do Porto, tendo conseguido levar o nome da ADR S. PEDRO FINS aos vários cantos do nosso país.
+						<br>A formação e o acompanhamento de jovens tem sido a prioridade e o foco da associação.</p>
+                        <!-- <p class="mb-4">Fundado em ...............jhjdsfkj sdfjksdhfkjsdfkljsdklfjsdklfjsdlkf kldsjfskdlfjdsklfjdsklfjsdklf sdf..............................................................................</p>
                         <p class="mb-4">...........kljjdsfl kdklfj dsklfj dskfjdskfj dlskfjsdklfj sdklfjdsklf djlfds dfjdhkjfhsdjkf dsjkfh dskj.........................</p>
                         <!-- <div class="row gy-2 gx-4 mb-4">
                             <div class="col-sm-6">
@@ -222,8 +230,8 @@
                             <div class="col-12	">
                                 <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 pe-0">
                                     <div class="service-content text-end">
-                                        <h5 class="mb-4">Academia</h5>
-                                        <p class="mb-0"><br>Introdução à prática desportiva, mais especificamente oo nível do futebol, para crianças desde o 5 até aos 7 anos. 
+                                        <h5 class="mb-4">Futebol e Futsal</h5>
+                                        <p class="mb-0"><br>Atividade no âmbito desportivo, nomeadamente nas modalidades de futebol e futsal.
 										 
 										   <br> <br>
 										  
