--- a/about.html
+++ b/about.html
@@ -109,27 +109,15 @@
 						<br>Atualmente, a ADR S. PEDRO FINS movimenta mais de 150 atletas, distribuídos pelas modalidades de futebol e futsal. Todas as épocas desportivas participam em campeonatos oficiais realizados pela Associação de Futebol do Porto, tendo conseguido levar o nome da ADR S. PEDRO FINS aos vários cantos do nosso país.
 						<br>A formação e o acompanhamento de jovens tem sido a prioridade e o foco da associação.</p>
 
-                        <!-- <div class="row gy-2 gx-4 mb-4">
+                        <div class="row gy-2 gx-4 mb-4">
                             <div class="col-sm-6">
-                                <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>First Class Flights</p>
+                                <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Tem como objectivo a promoção da prática desportiva, nomeadamente nas modalidades de futebol Sénior, Master e Juvenil da AFPORTO dos campeonatos distritais da AFPORTO, sendo uma associação desportiva a incluir e junto da população da freguesia e do concelho a prática da atividade de física e visando o desenvolvimento dos praticantes nomeadamente utilizando a prática desportiva como uma ferramenta pedagógica para o desenvolvimento integral dos mais novos;</p>
                             </div>
                             <div class="col-sm-6">
-                                <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Handpicked Hotels</p>
+                                <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Trabalha continuamente para alcançar resultados desportivos em equipa e individuais, e assim continuar a projectar a colectividade, a freguesia de São Pedro Fins e o concelho da Maia; </p>
                             </div>
-                            <div class="col-sm-6">
-                                <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>5 Star Accommodations</p>
-                            </div>
-                            <div class="col-sm-6">
-                                <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Latest Model Vehicles</p>
-                            </div>
-                            <div class="col-sm-6">
-                                <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>150 Premium City Tours</p>
-                            </div>
-                            <div class="col-sm-6">
-                                <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>24/7 Service</p>
-                            </div>
-                        </div>
-                        <!-- <a class="btn btn-primary rounded-pill py-3 px-5 mt-2" href="">Read More</a> -->
+                            
+                        </div> 
                     </div>
                 </div>
             </div>
