--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                                 </div>
                             </div>
                             
-                            <div class="col-12">
+                            <!-- <div class="col-12">
                                 <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 ps-0">
                                     <div class="service-icon p-4">
                                         <i class="fa fa-cog fa-4x text-primary"></i>
@@ -269,7 +269,7 @@
                                         </p>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     
