--- a/galeria.html
+++ b/galeria.html
@@ -134,7 +134,7 @@
 						<article class="thumb">
 							<a href="galeria/images/fulls/03.jpg" class="image"><img src="galeria/images/thumbs/03.jpg" alt="" /></a>
 							<h2>Sub 10/11</h2>
-							<p>  _ <br> @S. Pedro Fins.</p>
+							<p> Matilde, Miguel (GR), Artur, Ari, Martim, (T)Sandro  <br> Rita, Leonardo, Afonso<br> @S. Pedro Fins.</p>
 						</article>
 						<article class="thumb">
 							<a href="galeria/images/fulls/04.jpg" class="image"><img src="galeria/images/thumbs/04.jpg" alt="" /></a>
