--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                     <p class="mb-5 fs-5">Brevemente mais informações..:!!!!
                                     </p>
                                     <div class="d-flex align-items-center justify-content-center">
-                                        <a class="btn-hover-bg btn btn-primary rounded-pill text-white py-3 px-5" href="#">Inscreva-se aqui</a>
+                                        <a class="btn-hover-bg btn btn-primary rounded-pill text-white py-3 px-5" href="torneio_2024.html">Inscreva-se aqui</a>
                                     </div>
                                 </div>
                             </div>
