--- a/index.html
+++ b/index.html
@@ -1256,7 +1256,7 @@
                         <div class="guide-item">
                             <div class="guide-img">
                                 <div class="guide-img-efects">
-                                    <img src="img/logo4.png" class="img-fluid w-100 rounded-top" alt="Image">
+                                    <img src="img/fotos/academia.jpg" class="img-fluid w-100 rounded-top" alt="Image">
                                 </div>
                                 <div class="guide-icon rounded-pill p-2">
                                     <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fab fa-camera"></i></a>
