--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <head>
         <meta charset="utf-8">
         <title>Associação Desportiva e Recreativa de S. Pedro Fins</title>
-		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+		
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
